<resources>
    <string name="app_name">Taccount</string>
    <string name="string_newEvent">新增事件</string>
    <string name="string_createEvent">建立事件</string>
    <string name="string_eventName">名稱</string>
    <string name="string_hint_eventName">為您的行程命名</string>
    <string name="string_startDate">開始日期</string>
    <string name="string_endDate">結束日期</string>
    <string name="string_hint_chooseStartDate">選擇開始日期</string>
    <string name="string_hint_chooseEndDate">選擇結束日期</string>
    <string name="string_format_date">yyyy/MM/dd</string>
    <string name="string_finish">完成</string>
    <string name="string_ok">確定</string>
    <string name="string_cancel">取消</string>
    <string name="string_dateErrorTitle">錯誤日期</string>
    <string name="string_dateErrorMessage">開始日期不得晚於結束日期</string>
    <string name="string_eventNameErrorTitle">錯誤名稱</string>
    <string name="string_eventNameErrorMessage">名稱不得為空白</string>

    <!-- EventActivity Tab host -->
    <string name="string_tabName_expense">支出</string>
    <string name="string_tabName_wallet">錢包</string>
    <string name="string_tabName_calc">統計</string>
    <string name="string_tabName_setting">設定</string>

    <string name="string_new_taiwan_dollar">新臺幣</string>

    <!-- Expense Fragment -->
    <string name="string_date">日期</string>
    <string name="string_today_total">今日總額：</string>
    <string name="string_zero">0</string>

    <!-- dialog_new_expense -->
    <string name="string_dialog_title">新增支出</string>
    <string name="string_dialog_cost">金額</string>
    <string name="string_dialog_expense_title">名稱(必填)</string>
    <string name="string_dialog_expense_content">內容描述(可留空)</string>
    <string name="string_dialog_title_hint">Ex:支出1</string>

    <!-- expenses list item -->
    <string name="string_expenses_list_item_title">支出</string>
    <string name="string_expenses_list_item_currency">新臺幣</string>
    <string name="string_expenses_list_item_cost">0 元</string>

    <!--  Remove or change this placeholder text -->
    <string name="hello_expenses_fragment">Hello expenses fragment</string>
    <string name="hello_wallet_fragment">Hello wallet fragment</string>
    <string name="hello_statistics_fragment">Hello statistics fragment</string>
    <string name="hello_setting_fragment">Hello setting fragment</string>
</resources>
