<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.louislu.taccount.NewEventActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/newEvent_eventNameLinearLayout">

        <TextView
            android:text="@string/string_eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newEvent_eventNameTextView"
            tools:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newEvent_eventNameEditText"
            android:hint="@string/string_hint_eventName" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/newEvent_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newEvent_eventNameLinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/newEvent_startDateLinearLayout">

        <TextView
            android:text="@string/string_startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newEvent_startDateTextView"
            tools:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/newEvent_startDateEditText"
            android:hint="@string/string_hint_chooseStartDate"
            android:onClick="onClick"
            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newEvent_endDateLinearLayout"
        android:layout_below="@id/newEvent_startDateLinearLayout">

        <TextView
            android:text="@string/string_endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newEvent_endDateTextView"
            tools:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/newEvent_endDateEditText"
            android:hint="@string/string_hint_chooseEndDate"
            android:onClick="onClick"
            android:focusable="false" />
    </LinearLayout>

    <Button
        android:text="@string/string_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newEvent_endDateLinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/newEvent_eventCreateButton"
        tools:textSize="24sp"
        android:layout_marginTop="@dimen/newEventActivity_buttonMargin"
        android:onClick="onClick" />

</RelativeLayout>
